Implement cancellation callback API to update transaction status to 'CANCELED'
