# psp/requests.go
@@ -4,3 +4,7 @@ type ConfirmRequest struct {
 	TransactionID string
 	Amount        float64
 }
+
+type CancelRequest struct {
+	TransactionID string
+}
